rnc/src/snapshots/muffy_rnc__tests__parse_file-48.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Datatypes(
            DatatypesDeclaration {
                prefix: Some(
                    "w",
                ),
                uri: "http://whattf.org/datatype-draft",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Define(
                        Definition {
                            name: "SVG.id.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "id",
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: Some(
                                                "w",
                                            ),
                                            local: "xml-name",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.base.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: Some(
                                                "xml",
                                            ),
                                            local: "base",
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: "URI.datatype",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.lang.attrib",
                            combine: None,
                            pattern: Optional(
                                Choice(
                                    [
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: Some(
                                                        "xml",
                                                    ),
                                                    local: "lang",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "LanguageCode.datatype",
                                                },
                                            ),
                                        },
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "lang",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "LanguageCode.datatype",
                                                },
                                            ),
                                        },
                                    ],
                                ),
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.space.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: Some(
                                                "xml",
                                            ),
                                            local: "space",
                                        },
                                    ),
                                    pattern: Choice(
                                        [
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "default",
                                            },
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "preserve",
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.tabindex.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "tabindex",
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: "Integer.datatype",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.focusable.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "focusable",
                                        },
                                    ),
                                    pattern: Choice(
                                        [
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "true",
                                            },
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "false",
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Core.extra.attrib",
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Core.attrib",
                            combine: None,
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.id.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.base.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.lang.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.space.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.tabindex.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.focusable.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Core.extra.attrib",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
